--- a/aaa.qmd
+++ b/aaa.qmd
@@ -7,29 +7,63 @@ code-block-bg: dark
 ## General Info
 
 -   AAA = Authentication, Authorisation, Accounting
+
 -   Who are they, what can they do, what did they do...
--   
 
-## 
+-   `if-authenticated` used in **authorisation** config to allow user to access exec session once authenticated if TACACS/RADIUS server not reachable.
 
-## Features
+    ## 
 
-## 
-
-## 
-
-## Config
-
-AAA
+### **Configuration**
 
 ``` default
+username [user] privilege 15 secret [password] 
+!
 aaa new-model
+aaa group server tacacs+ [group]
+ server-private 10.44.155.20 single-connection key [key]
+ ip vrf forwarding Mgmt-intf
+ ip tacacs source-interface GigabitEthernet0
+!
+! Alternate Method of server config with single server^
+!
+tacacs server [server]
+ address ipv4 [10.44.241.250]
+ key [passkey]
+aaa group server tacacs+ [group-name]
+ server name [server]
+ ip tacacs source-interface GigabitEthernet0
+!
+aaa authentication login [method list] group [group] local
+aaa authorization exec [method list] group [group] local if-authenticated
+aaa authorization commands 15 [method list] group [group] local if-authenticated
+aaa accounting commands 1 [method list] start-stop group [group]
+aaa accounting commands 15 [method list] start-stop group [group]
+aaa session-id common
+!
+! using method list 'default' applies the AAA methods to all lines 
+!
+line vty 0 4
+login authentication [list-name]
 
-aaa group server tacacs+ TACACS_GROUP
-  server name TACACS1
-  ip tacacs
+
+***
+aaa authorization exec default local          - Puts authenticated user to priv exec upon login]
+line vty 0 4
+  authorization exec default
+  
+To use AAA on console port this is also required
+line con 0
+  logging authentication [group]
+  aaa authorization console
+  
 ```
 
 ## 
 
 ## Useful show commands
+
+-   `debug aaa authentication` - Debug all AAA auth
+-   `debug radius authentication` - Debug for radius auth
+-   `debug tacacs authentication` - Debug for tacacs auth
+-   `debug aaa protocol local` - Debug local authentication
