--- a/vrf.qmd
+++ b/vrf.qmd
@@ -11,14 +11,23 @@ code-block-bg: dark
 -   `VRF` when used with MPLS, `VRF-Lite` when used without
 -   
 
----
+------------------------------------------------------------------------
 
-Useful show commands
+Useful show commands + other
 
--   `show ip route vrf` - shows summary of vrf information
+-   `show ip vrf` / `show vrf` - shows summary of configured VRFs, including interfaces.
+
+-   `show ip route vrf [vrf-name]` - shows routing table of VRF
+
+-   `show ip vrf interfaces` / `show vrf ipv4 unicast interfaces` - shows interfaces in VRF.
+
+-   `ping vrf [name] 10.1.1.1` - ping from specific VRF
+
+-    `show ip eigrp vrf [vrf-name] interfaces`
+
 -   
 
----
+------------------------------------------------------------------------
 
 ## Config
 
