--- a/bgp.qmd
+++ b/bgp.qmd
@@ -80,7 +80,7 @@ code-block-bg: dark
 
 ## **BGP regexp**
 
--   Can be used to search for specifc AS-PATHs in table - for example: `show ip bgp regexp ^$`
+-   Can be used to search for specifc AS-PATHs in table - for example: `show ip bgp regexp ^$` this shows entries where AS-PATH is empty (locally originated)
 -   Above will show prefixes originated locally with the AS. Cheat sheet [here.](http://gponsolution.com/bgp-regular-expressions-cheat-sheet.html)
 -   Originated in AS 100: `_100$`, Learned from AS 100: `^100_`
 -   Can be used to filter with ACLs with IP as-path: `ip as-path access-list 1 permit _54$`
